--- a/public/forgot.html
+++ b/public/forgot.html
@@ -61,4 +61,29 @@ import { supabase } from "/js/supabase.js";
 
 document.addEventListener("DOMContentLoaded", () => {
 
-    document.ge
+    document.getElementById("sendCodeBtn").addEventListener("click", async () => {
+        const email = document.getElementById("email").value.trim();
+
+        if (!email) return alert("Introduce tu correo.");
+
+        const { error } = await supabase.auth.resetPasswordForEmail(email, {
+            redirectTo: window.location.origin + "/reset.html"
+        });
+
+        if (error) return alert(error.message);
+
+        alert("Se ha enviado un enlace de recuperación a tu correo.");
+    });
+
+});
+</script>
+</head>
+
+<body>
+<div class="box">
+    <h2>Recuperar contraseña</h2>
+    <input id="email" type="email" placeholder="Correo">
+    <button id="sendCodeBtn">Enviar enlace</button>
+</div>
+</body>
+</html>
