--- a/public/forgot.html
+++ b/public/forgot.html
@@ -61,29 +61,45 @@ import { supabase } from "/js/supabase.js";
 
 document.addEventListener("DOMContentLoaded", () => {
 
-    document.getElementById("sendCodeBtn").addEventListener("click", async () => {
+    document.getElementById("sendBtn").addEventListener("click", async () => {
         const email = document.getElementById("email").value.trim();
 
-        if (!email) return alert("Introduce tu correo.");
+        if (!email) {
+            alert("Introduce tu correo.");
+            return;
+        }
 
-        const { error } = await supabase.auth.resetPasswordForEmail(email, {
-            redirectTo: window.location.origin + "/reset.html"
-        });
+        // Buscar usuario
+        const { data, error } = await supabase
+            .from("users")
+            .select("email")
+            .eq("email", email)
+            .single();
 
-        if (error) return alert(error.message);
+        if (error || !data) {
+            alert("Este correo no está registrado.");
+            return;
+        }
 
-        alert("Se ha enviado un enlace de recuperación a tu correo.");
+        // Todo OK → redirigir a reset
+        window.location.href = `/reset.html?email=${encodeURIComponent(email)}`;
     });
 
 });
 </script>
-</head>
 
+</head>
 <body>
+
 <div class="box">
     <h2>Recuperar contraseña</h2>
+    <p>Ingresa tu correo para continuar.</p>
+
     <input id="email" type="email" placeholder="Correo">
-    <button id="sendCodeBtn">Enviar enlace</button>
+    <button id="sendBtn">Continuar</button>
+
+    <p><a href="/index.html">Volver</a></p>
 </div>
+
 </body>
 </html>
