--- a/public/reset.html
+++ b/public/reset.html
@@ -59,18 +59,16 @@ a { color: #a29bfe; }
 <script type="module">
 import { supabase } from "/js/supabase.js";
 
-document.addEventListener("DOMContentLoaded", async () => {
+document.addEventListener("DOMContentLoaded", () => {
 
-    // 1) Revisar si hay un usuario autenticado por el enlace
-    const { data, error } = await supabase.auth.getUser();
+    const email = new URLSearchParams(window.location.search).get("email");
 
-    if (error || !data.user) {
-        alert("Acceso denegado. Usa el enlace enviado a tu correo.");
-        window.location.href = "/forgot.html";
+    if (!email) {
+        alert("Error: Falta el correo.");
+        window.location.href = "/login.html";
         return;
     }
 
-    // 2) Solo si viene bien autenticado, permitimos cambiar la contraseña
     document.getElementById("resetBtn").addEventListener("click", async () => {
         const password = document.getElementById("password").value.trim();
 
@@ -79,12 +77,13 @@ document.addEventListener("DOMContentLoaded", async () => {
             return;
         }
 
-        const { error: updateError } = await supabase.auth.updateUser({
-            password
-        });
+        const { error } = await supabase
+            .from("users")
+            .update({ password })
+            .eq("email", email);
 
-        if (updateError) {
-            alert("Error actualizando: " + updateError.message);
+        if (error) {
+            alert("Error actualizando: " + error.message);
             return;
         }
 
