--- a/public/admin/admin.html
+++ b/public/admin/admin.html
@@ -1,1 +1,258 @@
-<h1>Admin Panel</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FixAll Admin Dashboard</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body class="bg-gray-100 flex h-screen">
+  <!-- SIDEBAR -->
+  <aside class="w-64 bg-gray-900 text-white flex flex-col">
+    <div class="p-6 text-2xl font-bold border-b border-gray-700">FixAll Admin</div>
+    <nav class="flex-1 p-4 space-y-2">
+      <a href="#users" class="block p-3 rounded hover:bg-gray-700">Users</a>
+      <a href="#workers" class="block p-3 rounded hover:bg-gray-700">Workers</a>
+      <a href="#jobs" class="block p-3 rounded hover:bg-gray-700">Jobs</a>
+    </nav>
+  </aside>
+
+  <!-- MAIN CONTENT -->
+  <main class="flex-1 overflow-y-auto p-6 space-y-20">
+
+    <!-- USERS SECTION -->
+    <section id="users" class="space-y-4">
+      <h2 class="text-3xl font-bold mb-6">Users</h2>
+      
+      <table class="w-full bg-white shadow rounded text-sm">
+        <thead>
+          <tr class="bg-gray-200 text-left">
+            <th class="p-3">Photo</th>
+            <th class="p-3">Full Name</th>
+            <th class="p-3">Email</th>
+            <th class="p-3">Phone</th>
+            <th class="p-3">City</th>
+            <th class="p-3">Role</th>
+            <th class="p-3">Actions</th>
+          </tr>
+        </thead>
+        <tbody id="usersTable"></tbody>
+      </table>
+    </section>
+
+    <!-- WORKERS SECTION -->
+    <section id="workers" class="space-y-4">
+      <h2 class="text-3xl font-bold mb-6">Workers</h2>
+
+      <table class="w-full bg-white shadow rounded text-sm">
+        <thead>
+          <tr class="bg-gray-200 text-left">
+            <th class="p-3">Photo</th>
+            <th class="p-3">Full Name</th>
+            <th class="p-3">Email</th>
+            <th class="p-3">Phone</th>
+            <th class="p-3">City</th>
+            <th class="p-3">Experience</th>
+            <th class="p-3">Actions</th>
+          </tr>
+        </thead>
+        <tbody id="workersTable"></tbody>
+      </table>
+    </section>
+
+    <!-- JOBS SECTION -->
+    <section id="jobs" class="space-y-4">
+      <h2 class="text-3xl font-bold mb-6">Jobs</h2>
+      <table class="w-full bg-white shadow rounded text-sm">
+        <thead>
+          <tr class="bg-gray-200 text-left">
+            <th class="p-3">Client</th>
+            <th class="p-3">Worker</th>
+            <th class="p-3">Status</th>
+          </tr>
+        </thead>
+        <tbody id="jobsTable"></tbody>
+      </table>
+    </section>
+
+  </main>
+
+
+
+<!-- MAIN SCRIPT -->
+<script type="module">
+  import { supabase } from "../js/supabase.js";
+
+
+  /* ===========================
+        LOAD USERS
+  ============================ */
+  async function loadUsers() {
+    const { data, error } = await supabase.from("users").select("*");
+    const table = document.getElementById("usersTable");
+
+    if (error) {
+      console.error(error);
+      return;
+    }
+
+    table.innerHTML = "";
+
+    data.forEach(u => {
+      table.innerHTML += `
+        <tr class="border-b">
+          <td class="p-3">
+            <img src="${u.profile_image || 'https://via.placeholder.com/50'}" class="w-10 h-10 rounded-full object-cover">
+          </td>
+          <td class="p-3 font-bold">${u.full_name}</td>
+          <td class="p-3">${u.email}</td>
+          <td class="p-3">${u.phone || 'N/A'}</td>
+          <td class="p-3">${u.city || 'N/A'}</td>
+          <td class="p-3">${u.role}</td>
+
+          <td class="p-3 space-x-2">
+            <button onclick="suspendUser('${u.id}')" class="bg-yellow-500 px-3 py-1 rounded text-white">Suspend</button>
+            <button onclick="blockUser('${u.id}')" class="bg-orange-600 px-3 py-1 rounded text-white">Block</button>
+            <button onclick="banUser('${u.id}')" class="bg-red-600 px-3 py-1 rounded text-white">Ban</button>
+            <button onclick="deleteUser('${u.id}')" class="bg-gray-700 px-3 py-1 rounded text-white">Delete</button>
+          </td>
+        </tr>`;
+    });
+  }
+
+
+
+
+
+  /* ===========================
+        USER ACTIONS
+  ============================ */
+  window.suspendUser = async (id) => {
+    await supabase.from("users").update({ role: "suspended" }).eq("id", id);
+    loadUsers();
+  };
+
+  window.blockUser = async (id) => {
+    await supabase.from("users").update({ role: "blocked" }).eq("id", id);
+    loadUsers();
+  };
+
+  window.banUser = async (id) => {
+    await supabase.from("users").update({ role: "banned" }).eq("id", id);
+    loadUsers();
+  };
+
+  window.deleteUser = async (id) => {
+    await supabase.from("users").delete().eq("id", id);
+    loadUsers();
+  };
+
+
+
+
+
+  /* ===========================
+        LOAD WORKERS
+  ============================ */
+  async function loadWorkers() {
+    const { data, error } = await supabase
+      .from("users")
+      .select("*")
+      .eq("role", "worker");
+
+    const table = document.getElementById("workersTable");
+
+    if (error) {
+      console.error(error);
+      return;
+    }
+
+    table.innerHTML = "";
+
+    data.forEach(w => {
+      table.innerHTML += `
+        <tr class="border-b">
+          <td class="p-3">
+            <img src="${w.profile_image || 'https://via.placeholder.com/50'}" class="w-10 h-10 rounded-full object-cover">
+          </td>
+          <td class="p-3 font-bold">${w.full_name}</td>
+          <td class="p-3">${w.email}</td>
+          <td class="p-3">${w.phone || 'N/A'}</td>
+          <td class="p-3">${w.city || 'N/A'}</td>
+          <td class="p-3">${w.experience_years || 0} years</td>
+
+          <td class="p-3 space-x-2">
+            <button onclick="suspendWorker('${w.id}')" class="bg-yellow-500 px-3 py-1 rounded text-white">Suspend</button>
+            <button onclick="blockWorker('${w.id}')" class="bg-orange-600 px-3 py-1 rounded text-white">Block</button>
+            <button onclick="banWorker('${w.id}')" class="bg-red-600 px-3 py-1 rounded text-white">Ban</button>
+            <button onclick="deleteWorker('${w.id}')" class="bg-gray-700 px-3 py-1 rounded text-white">Delete</button>
+          </td>
+        </tr>`;
+    });
+  }
+
+
+  /* ===========================
+        WORKER ACTIONS
+  ============================ */
+  window.suspendWorker = async (id) => {
+    await supabase.from("users").update({ role: "suspended" }).eq("id", id);
+    loadWorkers();
+  };
+
+  window.blockWorker = async (id) => {
+    await supabase.from("users").update({ role: "blocked" }).eq("id", id);
+    loadWorkers();
+  };
+
+  window.banWorker = async (id) => {
+    await supabase.from("users").update({ role: "banned" }).eq("id", id);
+    loadWorkers();
+  };
+
+  window.deleteWorker = async (id) => {
+    await supabase.from("users").delete().eq("id", id);
+    loadWorkers();
+  };
+
+
+
+
+  /* ===========================
+        LOAD JOBS
+  ============================ */
+  async function loadJobs() {
+    const { data, error } = await supabase.from("jobs").select("*");
+
+    const table = document.getElementById("jobsTable");
+
+    if (error) {
+      console.error(error);
+      return;
+    }
+
+    table.innerHTML = "";
+
+    data.forEach(j => {
+      table.innerHTML += `
+        <tr class="border-b">
+          <td class="p-3">${j.client_name}</td>
+          <td class="p-3">${j.worker_name || "Not Assigned"}</td>
+          <td class="p-3">${j.status}</td>
+        </tr>`;
+    });
+  }
+
+
+
+  /* ===========================
+        INIT LOAD
+  ============================ */
+  loadUsers();
+  loadWorkers();
+  loadJobs();
+</script>
+
+</body>
+</html>
